# Decozy

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  ai_usage.md  docker-compose.yaml  package-lock.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: ci.yaml
backend/: alembic.ini  pyproject.toml  seed_catalog.py  seed_demo.py  seed_project_items.py  set_project_image.py
backend/alembic/: env.py
backend/alembic/versions/: 2b2898939f96_initial_tables.py  a1b2c3d4e5f6_add_tokens_to_users.py  b3c4d5e6f7g8_add_last_credited_session.py  c78f67e510e1_initial_database_structure.py  ef9347346a27_stripe.py
backend/ops/: backend.Dockerfile
backend/src/app/: main.py
backend/src/app/api/: deps.py
backend/src/app/api/v1/: api.py
backend/src/app/api/v1/routers/: auth.py  payments.py  project.py  tokens.py  upload.py  user.py
backend/src/app/core/: logging.py  security.py  settings.py
backend/src/app/database/: session.py
backend/src/app/models/: __init__.py  item.py  order.py  project.py  subscription.py  user.py
backend/src/app/routers/: upload.py
backend/src/app/services/: ai_service.py  crewai_service.py  upload.py
backend/tests/: conftest.py  test_integration.py  test_payments.py  test_routers.py  test_upload_service.py
frontend/: ai_usage.md  next.config.ts  package-lock.json
frontend/nginx/: nginx.conf
frontend/ops/: Dockerfile
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: GalleryPage.tsx  (+1 more)
(+39 files in other folders)
